# ostov

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/src/: ExampleApp.cpp
learnOpenGL/: CMakeLists.txt
learnOpenGL/dependencies/include/fileSystem/: root_directory.h
learnOpenGL/shaders/: 1.colors.fs
ostov/: CMakeLists.txt
ostov/include/glad/: glad.h
ostov/include/ostov/: Mesh.h  RenderGraph.h  Renderer.h  Shader.h  application.h  core.h  entrypoint.h  ostov.h
ostov/src/: Application.cpp  Mesh.cpp  RenderGraph.cpp  Renderer.cpp  Shader.cpp  glad.c
